compiler/fir/analysis-tests/testData/resolveWithStdlib/statics/NonStaticInStaticScope.kt
class A {
    fun foo() {
        println("foo")
    }

    static {
        fun bar() {
            <!UNRESOLVED_REFERENCE!>foo<!>()
        }
    }
}
